Se agrega pregunta genero

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -472,6 +472,21 @@
                 </select>
               </div>
               <div class="mb-3">
+                <label for="q27" class="form-label mb-3">¿Cuál es tu género?</label>
+                <select
+                  class="form-select"
+                  id="q27"
+                  name="q27"
+                  aria-label="Default select example"
+                  required
+                >
+                  <option selected></option>
+                  <option value="8">Mujer</option>
+                  <option value="9">Hombre</option>
+
+                </select>
+              </div>
+              <div class="mb-3">
                 <button type="submit" class="btn btn-primary">Enviar respuestas</button>
               </div>
             
